# ZAFIRA-IA

./: .dockerignore  .env.example  .gitignore  Dockerfile  DockerfileEnv  Makefile  README.md  pyproject.toml
ai/: CLAUDE.md
src/app/: config.py  main.py
src/app/application/dto/: avatar.py  health.py  tryon.py
src/app/application/use_cases/: get_health.py
src/app/application/use_cases/avatar/: generate.py
src/app/application/use_cases/tryon/: generate.py
src/app/domain/: exceptions.py
src/app/infrastructure/ai/: base.py  gemini.py  hosted.py  hybrid.py  stub.py
src/app/infrastructure/http/: image_fetcher.py
src/app/infrastructure/security/: hmac_verifier.py
src/app/infrastructure/storage/: base.py  s3_client.py
src/app/interfaces/: dependencies.py  health.py  openapi_tags.py
src/app/interfaces/api/v1/: __init__.py
src/app/interfaces/api/v1/avatar/: router.py
src/app/interfaces/api/v1/tryon/: router.py
src/app/interfaces/schemas/: health.py
src/app/interfaces/security/: hmac_auth.py  openapi.py
tests/: conftest.py  test_avatar.py  test_gemini.py  test_health.py  test_hmac.py  test_image_fetcher.py  test_tryon.py
