[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "zafira-ia"
version = "0.1.0"
description = "ZAFIRA-IA — AI microservice for avatar generation and virtual try-on"
authors = ["Team"]
package-mode = true
packages = [{ include = "app", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.115.0,<1.0.0"
uvicorn = { version = ">=0.32.0,<1.0.0", extras = ["standard"] }
pydantic = ">=2.10.0,<3.0.0"
pydantic-settings = ">=2.6.0,<3.0.0"
httpx = ">=0.28.0,<1.0.0"
boto3 = ">=1.35.0,<2.0.0"
pillow = ">=10.4.0,<13.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0,<1.0.0"
pytest = ">=8.0.0,<9.0.0"
pytest-cov = ">=6.0.0,<7.0.0"
pytest-asyncio = ">=0.24.0,<1.0.0"
httpx2 = "^2.3.0"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "UP",
  "B",
  "C4",
  "SIM",
  "RUF",
]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/app/interfaces/**" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-q",
  "--strict-markers",
  "--cov=app",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=30",
  "--cov-branch",
]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
  "ignore::ResourceWarning",
]

[tool.coverage.run]
source = ["src/app"]
omit = ["tests/**", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
fail_under = 30
skip_covered = true
